style.css
body {
    /* Set line height to 1.5 times the font size
         and use the OS’s UI font as the website font
       */
    font: 100%/1.5 system-ui;
    max-width: 100ch;
    margin-inline: auto;
    padding: 10px;
  }

h1 {
  font-size: 2.5em;
  margin-bottom: 1em;
  text-align: center;
  color: #333;
}

nav.menu ul,
nav.menu li {
    display: contents;
  }

nav.menu {
  display: flex;
  margin-bottom: 1em;
  border-bottom: 1px solid oklch(80% 3% 200);
  }

nav.menu a {
  flex: 1;
  text-decoration: none;
  color: inherit;
  text-align: center;
  padding: 0.5em;
  }

nav.menu .current { 
  font-weight: bold;
  border-bottom: 0.4em solid oklch(80% 3% 200);
  padding-bottom: calc(0.5em - 0.4em);
  }

:root {
  --color-accent: oklch(65% 50% 0);
}

nav.menu a:hover {
  border-bottom: 0.4em solid var(--color-accent);
  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);

}

/* input,
textarea,
button {
    font: inherit;
    width: 100%;
    height: 2.5em;
    padding: 0.5em;
    font-size: 1em;
    box-sizing: border-box;
} */

/* form label,
form input,
form textarea,
form button {
    display: block;
    width: 100%;
    margin-block: 0.5em;
    box-sizing: border-box;
} */

textarea {
  width: 100%;
  height: 150px;
  padding: 10px;
  resize: vertical;
  font-size: 1em;
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

button {
  width: 150px;
  grid-column: 1 / -1;
  padding: 0.5em;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  gap: 1em;
}

.projects article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;
  margin: 0;
}

.projects h2 {
  margin: 0;
  font-size: 1.5em;
}

.projects img {
  max-width: 100%;
  height: auto;
  object-fit: cover;
}

html {
  color-scheme: light dark;
}

nav {
  --border-color: oklch(50% 10% 200 / 40%);
  border-bottom-color: var(--border-color);
}

.color-scheme {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 80%;
  font-family: inherit;
}

